# sdr-mcp

./: .gitignore  .mcpbignore  AGENTS.md  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  README.md  docker-compose.yml  justfile  manifest.json  pyproject.toml  start.ps1
.github/: REPOSITORY.md
.github/workflows/: ci.yml
assets/prompts/: examples.json  system.md  user.md
docker/gnuradio/: Dockerfile  demod_service.py  receiver.py
docs/: ARCHITECTURE.md  GNURADIO.md  HACKRF.md  INSTALL.md  MCP_SERVER.md  MOCK_SDR.md  OSCILLOSCOPE_MCP.md  RTL_SDR_V4.md  SDR_TECHNOLOGY.md  docker-resilience.md
scripts/: FleetStartMode.ps1  build-mcpb.ps1  docker-daemon-poll.ps1  kill-zombies.bat  kill-zombies.ps1  start-rtl-tcp.ps1
src/sdr_mcp/: __init__.py  async_bridge.py  audio_stream.py  capture.py  cli.py  fm_demod.py  frequency_db.py  gnuradio_client.py  mock_capture.py  mock_iq.py  online_db.py  processor.py  server.py  transport.py  web_api.py  websocket_server.py
src/sdr_mcp/handlers/: __init__.py  device.py  gnuradio_ops.py  health.py  online.py  spectrum.py  state.py  stations.py
src/sdr_mcp/tools/: __init__.py  agentic.py  device.py  gnuradio.py  online.py  spectrum.py  stations.py
tests/: __init__.py  test_agentic.py  test_async_bridge.py  test_audio.py  test_basic.py  test_gnuradio.py  test_mock.py  test_online_cache.py  test_web_api.py
web_sota/: biome.json  index.html  package-lock.json  package.json  start.bat  start.ps1  tailwind.config.js  vite.config.ts
web_sota/src/: App.tsx
web_sota/src/common/: api-client.ts  apps-catalog.ts  help-content.tsx  use-sdr-ws.ts
web_sota/src/components/layout/: app-layout.tsx  sidebar.tsx  topbar.tsx
web_sota/src/pages/: apps.tsx  chat.tsx  dashboard.tsx  help.tsx  settings.tsx  spectrum.tsx  stations.tsx  status.tsx  tools.tsx  waterfall.tsx
